# Minesweeper

./: .gitmodules  BeefProj.toml  BeefSpace.toml  README.md  emscripten_server_start.bat  todo.txt
MinesweeperAndroid/: BeefProj.toml
MinesweeperAndroid/src/: Program.bf
MinesweeperConsole/: BeefProj.toml
MinesweeperConsole/src/: Program.bf
MinesweeperGUI/: BeefProj.toml
MinesweeperGUI/src/: Program.bf
android/: README.md  beefbuild.cmd  gradle.properties
android/MinesweeperAndroid/: BeefSpace.toml
android/MinesweeperAndroid/src/: Program.bf
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.c
android/app/src/main/res/values/: strings.xml
assets/shaders/: grayscale.fs
assets/sounds/: se_19.ogg.reapeaks
src/: Animator.bf  Assets.bf  BoardSolver.bf  Colors.bf  Constants.bf  EasingFunctions.bf  EntryPoint.bf  Game.bf  Highscore.bf  Math.bf  Particles.bf  Scene.bf  Splashscreen.bf  Text.bf  todo.txt
wasm/: index.html
